feat(V24D6U2): support short-handed lineups