@@ -1,6 +1,7 @@
 package com.footballmanager.application.service.lineup;
 
 import com.footballmanager.adapters.in.web.career.lineup.dto.LineupDTO;
+import com.footballmanager.adapters.in.web.career.lineup.dto.LineupWarningDTO;
 import com.footballmanager.adapters.in.web.career.lineup.dto.PlayerLineupDTO;
 import com.footballmanager.application.exception.NotEnoughPlayersException;
 import com.footballmanager.domain.model.entity.CareerSave;
@@ -14,12 +15,21 @@ import reactor.core.publisher.Mono;
 
 import java.util.ArrayList;
 import java.util.Comparator;
+import java.util.HashSet;
 import java.util.List;
 import java.util.Objects;
+import java.util.Set;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
 /**
  * Implementación de UseCase para comandos del lineup.
+ *
+ * <p>V24D6U2: Supports short-handed lineups. See {@link LineupRules}.
+ * Auto-select now produces lineups in {@code [MIN, MAX]} and returns
+ * warnings on short-handed or no-GK. Manual select and confirmLineup
+ * accept the same range and reject out-of-bounds with a domain
+ * exception that maps to 422.
  */
 @Service
 @RequiredArgsConstructor
@@ -38,7 +48,9 @@ public class LineupCommandUseCaseImpl implements LineupCommandUseCase {
                 : Mono.empty())
             .flatMap(career -> {
                 String userTeamId = career.getUserSessionTeamId();
-                List<SessionPlayer> lineup = performAutoSelect(career, userTeamId, formation);
+                AutoSelectResult result = performAutoSelect(career, userTeamId, formation);
+                List<SessionPlayer> lineup = result.lineup();
+                List<LineupWarningDTO> warnings = result.warnings();
 
                 List<String> lineupIds = lineup.stream()
                     .map(SessionPlayer::getSessionPlayerId)
@@ -46,7 +58,7 @@ public class LineupCommandUseCaseImpl implements LineupCommandUseCase {
                 career.getTeamStarting11().put(userTeamId, lineupIds);
 
                 return careerRepository.save(career)
-                    .thenReturn(buildLineupDTO(lineup, formation));
+                    .thenReturn(buildLineupDTO(lineup, formation, warnings));
             });
     }
 
@@ -54,11 +66,17 @@ public class LineupCommandUseCaseImpl implements LineupCommandUseCase {
     public Mono<LineupDTO> manualSelectLineup(UUID userId, String formationCode, List<String> playerIds) {
         Formation formation = Formation.fromString(formationCode);
 
-        if (playerIds.size() != 11) {
-            return Mono.error(new IllegalArgumentException("Must select exactly 11 players"));
+        if (playerIds.size() < LineupRules.MIN_AVAILABLE_PLAYERS) {
+            return Mono.error(new NotEnoughPlayersException(
+                "Minimum " + LineupRules.MIN_AVAILABLE_PLAYERS
+                + " available players required, got " + playerIds.size()));
         }
-
-        if (playerIds.stream().distinct().count() != 11) {
+        if (playerIds.size() > LineupRules.MAX_LINEUP_PLAYERS) {
+            return Mono.error(new IllegalArgumentException(
+                "Maximum " + LineupRules.MAX_LINEUP_PLAYERS
+                + " players allowed, got " + playerIds.size()));
+        }
+        if (playerIds.stream().distinct().count() != playerIds.size()) {
             return Mono.error(new IllegalArgumentException("Cannot select same player twice"));
         }
 
@@ -82,14 +100,20 @@ public class LineupCommandUseCaseImpl implements LineupCommandUseCase {
                     .filter(Objects::nonNull)
                     .toList();
 
-                lineupHelper.validateLineupBasic(selectedPlayers);
-                lineupHelper.validateLineupFormation(selectedPlayers, formation);
+                // Reject if selected players are not all available (injured/suspended/low energy)
                 lineupHelper.validatePlayerFitness(selectedPlayers);
+
+                // Compute warnings (no-GK, position-deficit informational)
+                List<LineupWarningDTO> warnings = lineupHelper.detectShortHandedWarnings(selectedPlayers);
+                if (selectedPlayers.size() < LineupRules.TARGET_LINEUP_PLAYERS) {
+                    warnings = new ArrayList<>(warnings);
+                    warnings.add(LineupWarningDTO.shortHanded(selectedPlayers.size()));
+                }
 
                 career.getTeamStarting11().put(userTeamId, playerIds);
 
                 return careerRepository.save(career)
-                    .thenReturn(buildLineupDTO(selectedPlayers, formation));
+                    .thenReturn(buildLineupDTO(selectedPlayers, formation, warnings));
             });
     }
 
@@ -103,15 +127,30 @@ public class LineupCommandUseCaseImpl implements LineupCommandUseCase {
                 String userTeamId = career.getUserSessionTeamId();
                 List<String> lineupIds = career.getTeamStarting11().get(userTeamId);
 
-                if (lineupIds == null || lineupIds.size() != 11) {
-                    return Mono.error(new IllegalStateException("No valid lineup selected"));
+                if (lineupIds == null) {
+                    return Mono.error(new NotEnoughPlayersException(
+                        "No lineup selected. Minimum "
+                        + LineupRules.MIN_AVAILABLE_PLAYERS + " players required."));
+                }
+                int size = lineupIds.size();
+                if (size < LineupRules.MIN_AVAILABLE_PLAYERS) {
+                    return Mono.error(new NotEnoughPlayersException(
+                        "Lineup has only " + size + " players. Minimum "
+                        + LineupRules.MIN_AVAILABLE_PLAYERS + " required."));
+                }
+                if (size > LineupRules.MAX_LINEUP_PLAYERS) {
+                    return Mono.error(new IllegalArgumentException(
+                        "Lineup has " + size + " players. Maximum "
+                        + LineupRules.MAX_LINEUP_PLAYERS + " allowed."));
                 }
 
                 return careerRepository.save(career).then();
             });
     }
 
-    private List<SessionPlayer> performAutoSelect(CareerSave career, String teamId, Formation formation) {
+    private record AutoSelectResult(List<SessionPlayer> lineup, List<LineupWarningDTO> warnings) {}
+
+    private AutoSelectResult performAutoSelect(CareerSave career, String teamId, Formation formation) {
         List<String> squadIds = career.getTeamManager().getTeamSquads().get(teamId);
 
         if (squadIds == null || squadIds.isEmpty()) {
@@ -128,51 +167,85 @@ public class LineupCommandUseCaseImpl implements LineupCommandUseCase {
             .sorted(Comparator.comparing(SessionPlayer::calculateOverall).reversed())
             .toList();
 
-        List<SessionPlayer> lineup = new ArrayList<>();
+        // V24D6U2: hard floor at MIN_AVAILABLE_PLAYERS, return controlled 422 if not met
+        if (availablePlayers.size() < LineupRules.MIN_AVAILABLE_PLAYERS) {
+            throw new NotEnoughPlayersException(
+                "Minimum " + LineupRules.MIN_AVAILABLE_PLAYERS
+                + " available players required, got " + availablePlayers.size());
+        }
 
-        // GK
+        List<SessionPlayer> lineup = new ArrayList<>();
+        List<LineupWarningDTO> warnings = new ArrayList<>();
+        Set<String> alreadyTaken = new HashSet<>();
+
+        // 1. GK — prefer one, but allow missing (warning)
         availablePlayers.stream()
             .filter(p -> "GK".equals(p.getPosition()))
             .findFirst()
-            .ifPresentOrElse(
-                lineup::add,
-                () -> { throw new NotEnoughPlayersException("No available goalkeeper"); }
-            );
+            .ifPresent(p -> {
+                lineup.add(p);
+                alreadyTaken.add(p.getSessionPlayerId());
+            });
 
-        // Defenders
+        // 2. Defenders — best-effort up to formation.getDefenders()
         List<SessionPlayer> defenders = availablePlayers.stream()
             .filter(p -> lineupHelper.isDefender(p.getPosition()))
+            .filter(p -> !alreadyTaken.contains(p.getSessionPlayerId()))
             .limit(formation.getDefenders())
-            .toList();
-        if (defenders.size() < formation.getDefenders()) {
-            throw new NotEnoughPlayersException("Not enough defenders");
-        }
+            .collect(Collectors.toList());
         lineup.addAll(defenders);
+        defenders.forEach(p -> alreadyTaken.add(p.getSessionPlayerId()));
 
-        // Midfielders
+        // 3. Midfielders — best-effort up to formation.getMidfielders()
         List<SessionPlayer> midfielders = availablePlayers.stream()
             .filter(p -> lineupHelper.isMidfielder(p.getPosition()))
+            .filter(p -> !alreadyTaken.contains(p.getSessionPlayerId()))
             .limit(formation.getMidfielders())
-            .toList();
-        if (midfielders.size() < formation.getMidfielders()) {
-            throw new NotEnoughPlayersException("Not enough midfielders");
-        }
+            .collect(Collectors.toList());
         lineup.addAll(midfielders);
+        midfielders.forEach(p -> alreadyTaken.add(p.getSessionPlayerId()));
 
-        // Attackers
+        // 4. Attackers — best-effort up to formation.getAttackers()
         List<SessionPlayer> attackers = availablePlayers.stream()
             .filter(p -> lineupHelper.isAttacker(p.getPosition()))
+            .filter(p -> !alreadyTaken.contains(p.getSessionPlayerId()))
             .limit(formation.getAttackers())
-            .toList();
-        if (attackers.size() < formation.getAttackers()) {
-            throw new NotEnoughPlayersException("Not enough attackers");
-        }
+            .collect(Collectors.toList());
         lineup.addAll(attackers);
+        attackers.forEach(p -> alreadyTaken.add(p.getSessionPlayerId()));
 
-        return lineup;
+        // 5. Fill the gap with any remaining available players (best OVR first)
+        // so the lineup reaches MAX_LINEUP_PLAYERS when possible.
+        if (lineup.size() < LineupRules.MAX_LINEUP_PLAYERS) {
+            int slotsLeft = LineupRules.MAX_LINEUP_PLAYERS - lineup.size();
+            List<SessionPlayer> fill = availablePlayers.stream()
+                .filter(p -> !alreadyTaken.contains(p.getSessionPlayerId()))
+                .limit(slotsLeft)
+                .collect(Collectors.toList());
+            lineup.addAll(fill);
+        }
+
+        // Defensive cap in case we have more than MAX (e.g., if formation summed > 11)
+        final List<SessionPlayer> finalLineup;
+        if (lineup.size() > LineupRules.MAX_LINEUP_PLAYERS) {
+            finalLineup = new ArrayList<>(lineup.subList(0, LineupRules.MAX_LINEUP_PLAYERS));
+        } else {
+            finalLineup = lineup;
+        }
+
+        // V24D6U2: warnings
+        if (lineupHelper.detectShortHandedWarnings(lineup).size() > 0) {
+            warnings.addAll(lineupHelper.detectShortHandedWarnings(lineup));
+        }
+        if (lineup.size() < LineupRules.TARGET_LINEUP_PLAYERS) {
+            warnings.add(LineupWarningDTO.shortHanded(lineup.size()));
+        }
+
+        return new AutoSelectResult(lineup, warnings);
     }
 
-    private LineupDTO buildLineupDTO(List<SessionPlayer> players, Formation formation) {
+    private LineupDTO buildLineupDTO(List<SessionPlayer> players, Formation formation,
+                                      List<LineupWarningDTO> warnings) {
         List<PlayerLineupDTO> playerDTOs = players.stream()
             .map(p -> new PlayerLineupDTO(
                 p.getSessionPlayerId(),
@@ -188,8 +261,7 @@ public class LineupCommandUseCaseImpl implements LineupCommandUseCase {
                 p.getSuspensionRemainingMatches()
             ))
             .toList();
-
-        return new LineupDTO(formation.getCode(), playerDTOs, false);
+        return new LineupDTO(formation.getCode(), playerDTOs, false, warnings);
     }
 
     private boolean isPlayerAvailable(SessionPlayer p) {
